# verifuse-rti-stack

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
android/: .gitignore  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/verifuse/rti/: BundleBuilder.kt  MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: styles.xml
cli/: rti_cli.py
core/: __init__.py  canonical.py  crypto.py  policy.py  verify.py
demo_data/: bundle.json  verification.json
policies/: auto_collision_v1.json
schemas/: rti0.json  rti1.json  rti2.json  rti3.json  rti4.json  rti5.json  rti6.json
tests/: test_verify.py
tools/: serve_web.py
web/: app.js  index.html  manifest.json  styles.css  sw.js
